Now with type hinting!

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,5 +1,9 @@
 {
 	"$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
 	"workspace.maxPreload": 50000,
-	"workspace.preloadFileSize": 5000
+	"workspace.preloadFileSize": 5000,
+	"files.exclude": [
+		"Mods/shared/UEHelpers/*",
+		"Mods/shared/types/BP*"
+	  ]
 }
