Updated palworld mod manager script to correctly sync to client and server Palworld dirs

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,9 @@ luac.out
 Mods/CommunalGuildExp/Scripts/party.txt
 Mods/CommunalGuildExp/Scripts/known_players.txt
 
-enabled.txt
+*/enabled.txt
 Mods/SandboxMods/*
 
 *.code-workspace
+
+.env
